<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/textView_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:paddingTop="10dp"
        android:text="@string/sign_in"
        android:textIsSelectable="true"/>

    <Button
        android:id="@+id/btn_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_above="@id/textView_signIn"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btn_continueFree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/btn_signUp"
        android:layout_toLeftOf="@id/btn_signUp"
        android:text="@string/continue_free"
        android:layout_marginRight="10dp"/>

    <EditText
        android:id="@+id/editText_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_signUp"
        android:singleLine="true"
        android:hint="@string/pw_hint"/>

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/editText_pw"
        android:singleLine="true"
        android:hint="@string/email_hint"/>

    <EditText
        android:id="@+id/editText_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/editText_email"
        android:singleLine="true"
        android:hint="@string/nickname_hint"/>

    <ImageView
        android:id="@+id/imgView_settings"
        android:src="@mipmap/settings_gear_symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"/>

</RelativeLayout>