<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:id="@+id/rl_setIp"
    android:background="#f5f5f5">

    <TextView
        android:id="@+id/textView_enterIp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_ip"
        android:textColor="#000000"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editText_enterIp"
        android:inputType="text"
        android:hint="@string/enter_ip_hint"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_setIp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_ip"/>

</LinearLayout>