<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_signIn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.SignInActivity">

    <ImageView
        android:id="@+id/imgView_settings"
        android:src="@mipmap/settings_gear_symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"/>

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgView_settings"
        android:layout_marginTop="60dp"
        android:singleLine="true"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint" />

    <EditText
        android:id="@+id/editText_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_email"
        android:singleLine="true"
        android:inputType="textPassword"
        android:hint="@string/pw_hint" />

    <Button
        android:id="@+id/btn_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_below="@id/editText_pw"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btn_continueFree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/btn_signIn"
        android:layout_toStartOf="@id/btn_signIn"
        android:text="@string/continue_free"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:id="@+id/textView_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_continueFree"
        android:paddingTop="20dp"
        android:text="@string/sign_up"
        android:textIsSelectable="true"/>

</RelativeLayout>